<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@color/blue"/>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="50dp"
        android:layout_margin="20dp"
        android:id="@+id/imageView">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:background="#FF6F00"
            android:src="@drawable/group"
            />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/showattendance"
        android:layout_width="120dp"
        android:layout_height="200dp"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="10dp"
        android:backgroundTint="@color/lightred">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/showattendance"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="40dp"
            android:drawableTop="@drawable/show_icon"
            />

    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/markattendance"
        android:layout_width="120dp"
        android:layout_height="200dp"
        android:layout_below="@id/imageView"
        android:layout_toStartOf="@id/showattendance"
        android:backgroundTint="@color/orange"
        app:cardElevation="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/maekattendance"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="40dp"
            android:drawableTop="@drawable/markattendace_icon"
            />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/homework"
        android:layout_width="120dp"
        android:layout_height="200dp"
        android:layout_below="@id/imageView"
        android:layout_toEndOf="@id/showattendance"
        android:backgroundTint="#00ACC1"
        app:cardElevation="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:text="@string/homework"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:drawableTop="@drawable/homework_icon"/>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:layout_marginStart="30dp"
        android:backgroundTint="@color/pink"
        android:layout_marginTop="20dp"
        android:id="@+id/gallery"
        android:layout_below="@id/markattendance">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/gallery"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:gravity="center_vertical"
            android:drawableRight="@drawable/baseline_image_search_24"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="10dp"/>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:layout_marginstart="30dp"
        android:backgroundTint="@color/green"
        android:id="@+id/notice"
        android:layout_below="@id/homework"
        android:layout_marginStart="220dp"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/notice"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:gravity="center_vertical"
            android:drawableRight="@drawable/baseline_attach_email_24"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="10dp"/>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:layout_marginStart="30dp"
        android:backgroundTint="@color/lightblue"
        android:id="@+id/payfee"
        android:layout_below="@id/gallery"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/payfee"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:gravity="center_vertical"
            android:drawableRight="@drawable/payfee_icon"
            android:layout_marginEnd="10dp" />
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:layout_marginstart="30dp"
        android:backgroundTint="@color/ligntorange"
        android:id="@+id/about"
        android:layout_below="@id/notice"
        android:layout_marginStart="220dp"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/about"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:gravity="center_vertical"
            android:drawableRight="@drawable/about_icon"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="10dp"/>
    </com.google.android.material.card.MaterialCardView>
</RelativeLayout>